--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
 {{ partial "head.html" . }}
 <body>
   {{ partial "header.html" . }}
-  <section id="wrapper" {{ with .File }}{{ if eq .Dir "about/" }} class="bio" {{ end }}{{ end }}>
+  <section id="wrapper"{{ if and .File (eq .File.Dir "about/") }} class="bio"{{ end }}>
 	{{ block "main" . }}{{ end }}
   </section>
   {{ partial "footer.html" . }}
